Problem with multi-column dorpdown lists, when scrolling is enabled: the bottom-most elements are not shown #29018

Closed
opened 2011-10-24 18:16:55 +02:00 by Caroline Moorthaemer · 12 comments

%%%I downloaded 2.60 2 days ago and there's something amiss: the subsurf modifier is only available at random. With simple objects such as a cube or a cylinder it works, however when you have a more complicated object it mysteriously disappears from the modifier list, this happens especially with objects created in 2.59. Sometimes, however, such as after restarting Blender 3 times, it unexpectedly reappears on the modifier list ... until you start working on a different object (same file, same scene) and it's gone again.

I cannot give you a concrete example because it's so random.

Good luck!%%%

%%%I downloaded 2.60 2 days ago and there's something amiss: the subsurf modifier is only available at random. With simple objects such as a cube or a cylinder it works, however when you have a more complicated object it mysteriously disappears from the modifier list, this happens especially with objects created in 2.59. Sometimes, however, such as after restarting Blender 3 times, it unexpectedly reappears on the modifier list ... until you start working on a different object (same file, same scene) and it's gone again. I cannot give you a concrete example because it's so random. Good luck!%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hm, can't reproduce this quickly.

What OS are you on? %%%

%%%Hm, can't reproduce this quickly. What OS are you on? %%%

%%%Hi Thomas,

Sorry, I should've put this in my original comment..

I'm using 64-bit Windows 7.%%%

%%%Hi Thomas, Sorry, I should've put this in my original comment.. I'm using 64-bit Windows 7.%%%

%%%I did some more digging and I found a file in which the problem occurs consistently.

When you select the "cabin_base" object and try to add a subsurf modifier to it, the modifier is not on the list%%%

%%%I did some more digging and I found a file in which the problem occurs consistently. When you select the "cabin_base" object and try to add a subsurf modifier to it, the modifier is not on the list%%%

%%%Downloaded your file and selected "cabin_mesh", I can add a subsurf modifier, it's normal in the list. Please test 2.60a or a current SVN build. %%%

%%%Downloaded your file and selected "cabin_mesh", I can add a subsurf modifier, it's normal in the list. Please test 2.60a or a current SVN build. %%%

%%%Ok, I will. Thank you%%%

%%%Ok, I will. Thank you%%%

%%%Bug also reported by adhoniran, with blender 41226 (#29088):

«
I just noticied that Subdivision Surface Modifier some times is not appearing at Modifiers Menu. I needed to save my project and restart Blender to get Subdivision Surface modifier option available again. No changes on project are maden, only closing Blender and opening again to get Subdivision Surface option.

Windows 7 Professional 64bits
NVidia GeForce 310M
Blender 2.60a
»%%%

%%%Bug also reported by adhoniran, with blender 41226 (#29088): « I just noticied that Subdivision Surface Modifier some times is not appearing at Modifiers Menu. I needed to save my project and restart Blender to get Subdivision Surface modifier option available again. No changes on project are maden, only closing Blender and opening again to get Subdivision Surface option. Windows 7 Professional 64bits NVidia GeForce 310M Blender 2.60a »%%%

%%%Yes, downloading 2.60a didn't make any difference. I have done some more testing and I found out that it works fine with objects created in 2.58, it appears that only scenes and/or objects created with 2.59 are affected by this. However, not all scenes/object from 2.59 have this problem, most notably it happens with files created in 2.59.2.

As I said in my first post: it appears to be completely random. Sometimes saving the file and restarting Blender helps, sometimes it makes no difference.

As it happens, I'm just about to create a whole new scene and I don't expect any problems as I will create it in 2.60a :D%%%

%%%Yes, downloading 2.60a didn't make any difference. I have done some more testing and I found out that it works fine with objects created in 2.58, it appears that only scenes and/or objects created with 2.59 are affected by this. However, not all scenes/object from 2.59 have this problem, most notably it happens with files created in 2.59.2. As I said in my first post: it appears to be completely random. Sometimes saving the file and restarting Blender helps, sometimes it makes no difference. As it happens, I'm just about to create a whole new scene and I don't expect any problems as I will create it in 2.60a :D%%%

%%%Ah, I think I have understood the problem. It’s not that you can’t add the modifier (try, in the 3D view, →"Add Modifier"→, you should get the complete menu ;) ), it’s a problem with the drop-down list menu.

When it has not enough room to show it’s whole content, it shrinks and shows arrows to allow scrolling it. Problem is, the two bottom-most modifiers (Subsurf in Generate column, and Wave in Deform one) are never shown… The same can also be found in e.g. add constraint menu. However, it does not seem to affect single-column menus…

Changed the summary (was "Subsurf available sometimes, sometimes not") and category.%%%

%%%Ah, I think I have understood the problem. It’s not that you can’t add the modifier (try, in the 3D view, <space>→"Add Modifier"→<enter>, you should get the complete menu ;) ), it’s a problem with the drop-down list menu. When it has not enough room to show it’s whole content, it shrinks and shows arrows to allow scrolling it. Problem is, the two bottom-most modifiers (Subsurf in Generate column, and Wave in Deform one) are never shown… The same can also be found in e.g. add constraint menu. However, it does not seem to affect single-column menus… Changed the summary (was "Subsurf available sometimes, sometimes not") and category.%%%

%%%Attached patch fixing that issue…%%%

%%%Attached patch fixing that issue…%%%

%%%Fixed in svn41976.

Thanks for reporting :)%%%

%%%Fixed in svn41976. Thanks for reporting :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29018
No description provided.